3-network-policies/kubernetes/task-3-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: task-3-namespace
  labels:
    networking/namespace: task-3-namespace
