3-network-policies/kubernetes/task-3-namespace-with-network-policy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: task-3-namespace
  labels:
    networking/namespace: task-3-namespace

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: task-3-namespace
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
